--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Error Boy | Portfolio</title>
   <link rel="stylesheet" href="styl.css" />
 </head>
+
 <body>
 
   <!-- Hero Section -->
-  <header class="hero">
+  <header>
+    <img src="portfolio.jpg" alt="Your Photo" class="profile-pic" />
     <h1>Error Boy</h1>
-    <h2>Web Developer | Web Designer | Logo Designer</h2>
   </header>
 
   <!-- About Me Section -->
   <section class="about">
     <h2>About Me</h2>
     <p>
-      Hi, I'm a passionate <strong>web developer</strong> currently learning and improving every day. I'm confident in my skills as a designer and developer, and I also specialize in creative <strong>logo design</strong>.
+      Hi, I'm a passionate <strong>web developer</strong> currently learning and improving every day. I'm confident in
+      my skills as a designer and developer, and I also specialize in creative <strong>logo design</strong>.
     </p>
   </section>
 
@@ -32,7 +35,8 @@
   <section class="project">
     <h2>Project: Snake Game (Neon Style)</h2>
     <p>
-      I created this game using only <strong>HTML, CSS, and JavaScript</strong> — no game engines involved. It features neon effects, keyboard controls, and a modern look.
+      I created this game using only <strong>HTML, CSS, and JavaScript</strong> — no game engines involved. It features
+      neon effects, keyboard controls, and a modern look.
     </p>
     <a href="https://errorboy928.github.io/Snack-Game/">View Project</a>
   </section>
@@ -49,4 +53,5 @@
   </section>
 
 </body>
+
 </html>
