--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     <p>
       I created this gaming website using only <strong>HTML, CSS, and JavaScript</strong> — a modern look.
     </p>
-    <a href="">View Project</a>
+    <a href="https://errorboy928.github.io/Game-UP/">View Project</a>
   </section>
   <section class="project">
-    <h2>Project: Neon Bird</h2>
+    <h2>Project: Neon-Flying-Box</h2>
     <p>
       iI developed this game using only <strong>HTML, CSS, and JavaScript</strong> _ no game engine involved.Just pure
       website coding in neon <style class=""></style>
     </p>
-    <a href="">View Project</a>
+    <a href="https://errorboy928.github.io/Game-UP/">View Project</a>
   </section>
 
   <!-- Contact Section -->
@@ -60,5 +60,6 @@
   </section>
 
 </body>
+
 
 </html>
