--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       iI developed this game using only <strong>HTML, CSS, and JavaScript</strong> _ no game engine involved.Just pure
       website coding in neon <style class=""></style>
     </p>
-    <a href="https://errorboy928.github.io/Game-UP/">View Project</a>
+    <a href="https://errorboy928.github.io/Neon-Flying-Box/">View Project</a>
   </section>
 
   <!-- Contact Section -->
@@ -63,3 +63,4 @@
 
 
 </html>
+
