--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h2>Project: Neon-Flying-Box</h2>
     <p>
       iI developed this game using only <strong>HTML, CSS, and JavaScript</strong> _ no game engine involved.Just pure
-      website coding in neon <style class=""></style>
+      website coding in neon style.
     </p>
     <a href="https://errorboy928.github.io/Neon-Flying-Box/">View Project</a>
   </section>
@@ -61,6 +61,4 @@
 
 </body>
 
-
 </html>
-
