--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p>
       I created this gaming website using only <strong>HTML, CSS, and JavaScript</strong> — a modern look.
     </p>
-    <a href="https://errorboy928.github.io/Game-UP/">View Project</a>
+    <a href="https://game-up-drab.vercel.app/">View Project</a>
   </section>
   <section class="project">
     <h2>Project: Neon-Flying-Box</h2>
@@ -45,7 +45,7 @@
       iI developed this game using only <strong>HTML, CSS, and JavaScript</strong> _ no game engine involved.Just pure
       website coding in neon style.
     </p>
-    <a href="https://errorboy928.github.io/Neon-Flying-Box/">View Project</a>
+    <a href="https://neon-flying-box.vercel.app/">View Project</a>
   </section>
 
   <!-- Contact Section -->
@@ -60,5 +60,6 @@
   </section>
 
 </body>
+
 
 </html>
