--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Error Boy | Portfolio</title>
+  <link rel="icon" href="portfolio.jpg" />
   <link rel="stylesheet" href="styl.css" />
 </head>
 
@@ -47,6 +48,13 @@
     </p>
     <a href="https://neon-flying-box.vercel.app/">View Project</a>
   </section>
+  <section class="project">
+    <h2>Project: Code with Error Boy</h2>
+    <p>
+      I created this website for those people how want to learn coding and programing with <strong>HTML and Css</strong> from basic.
+    </p>
+    <a href="https://errorboy928.github.io/Code-with-Error-Boy/">View Project</a>
+  </section>
 
   <!-- Contact Section -->
   <section class="contact">
@@ -63,3 +71,4 @@
 
 
 </html>
+
